Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -7,12 +7,17 @@
 }
 
 .filter-toggle-container {
-  left: 100px;
   position: fixed;
-  right: 100px;
   text-align: center;
-  top: 15px;
+  top: 72px;
+  width: 100%;
   z-index: 1099;
+
+  button {
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
+    height: 40px;
+    width: 260px;
+  }
 
   @media (min-width: $screen-sm-min) {
     display: none;
@@ -28,6 +33,8 @@
   }
 
   @media (max-width: $screen-xs-max) {
+    padding: 70px 0 0;
+
     &.hideFilter {
       display: none;
     }
