--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -1,8 +1,16 @@
 .search-container {
   background-color: $gray-lighter;
   height: 100%;
-  overflow: auto;
   position: relative;
+
+  @media (min-width: $screen-md-min) {
+    overflow: auto;
+  }
+
+  @media (max-width: $screen-xs-max) {
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+  }
 }
 
 .search-scroll-up {
@@ -28,17 +36,12 @@
 
 .search-results-wrapper {
   background-color: $gray-lighter;
-  padding-top: 39px;
-
-  @media (max-width: $screen-xs-max) {
-    * {
-      -webkit-overflow-scrolling: touch;
-    }
-  }
+  padding-top: 50px;
 
   @media (min-width: $screen-md-min) {
     bottom: 0;
     left: 0;
+    padding-top: 39px;
     position: absolute;
     right: 361px;
     top: 0;
